--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   'sans-serif'; 
   font-size: 16px;
   color: #444;
-  line-height: 1.5;
+  line-height: 1.2;
   margin: 0;
 }
 
@@ -72,10 +72,13 @@ main {
   min-height: 95vh;
   padding: 10% 10px;
   color: white;
+ 
 }
 
 img {
   max-width: 60%;
+  margin-right: 20%;
+  margin-left: 20%;
 }
 
 #l1 {
@@ -83,31 +86,32 @@ img {
 }
 
 #l1 span:nth-child(1) {
-  color: purple;
+  color: rgb(97, 59, 187);
   margin-left: 22%;
 }
 
 #l1 span:nth-child(2) {
-  color: yellow;
+  color: blue;
   margin-left: 36%
 }
 
 #l2 span:nth-child(1) {
   color: red;
   margin-left: 31%;
-  font-size: 15px;
+  font-size: 10px;
 }
 
 #l2 span:nth-child(2) {
   color: orange;
   margin-left: 35%;
-  font-size: 19px;
+  font-size: 18px;
+  opacity: 0.5;
 }
 
 #l3 span:nth-child(1) {
   color: lightblue;
   margin-left: 23%;
-  opacity: .20;
+  opacity: .8;
 }
 
 #l3 span:nth-child(2) {
@@ -119,7 +123,17 @@ img {
 #l4 span:nth-child(1) {
   color: tomato;
   margin-left: 31%;
-  opacity: .20;
+ opacity: .5;
+}
+#l5 span:nth-child(1){
+  color: rgb(204, 187, 39);
+  margin-left: 25%;
+}
+#l5 span:nth-child(2) {
+  color: rgb(114, 108, 197);
+  margin-left: 30%;
+  font-size: 11px;
+
 }
 
 
@@ -131,7 +145,9 @@ img {
   body {
     font-size: 20px;
   }
-
+  h1 {
+    font-size: 22px;
+  }
   nav {
       right: auto;
       bottom: 0;
@@ -167,7 +183,7 @@ img {
       padding-top: 0;
       padding-left: 136px;
   }
-
+  
   .container {
       height: 100vh;
       padding-top: 20px;
