--- a/style.css
+++ b/style.css
@@ -136,6 +136,10 @@ img {
   text-align: center;
 }
 
+.contact h2 {
+  text-align: center;
+}
+
 .contact p {
   margin-top: 20vh;
   text-align: center;
